tests/NormalTests/paczka2/big_fuzzy/33828091.err
Error in line 8: nSz S422 77,3
Error in line 6: UtbLk15 A279 36,6
Error in line 10: A279 A244 80,7
Error in line 21: xwK8A A244 141,30
Error in line 11: UtbLk15 A244 1,6
Error in line 24: b68 A545 18,6
Error in line 28: A279 A545 62,6
Error in line 30: b68 S422 70,6
Error in line 34: b68 A545 15,0
Error in line 19: xwK8A A244 66,2
Error in line 54: UtbLk15 A545 70,2
Error in line 59: UtbLk15 S422 77,6
Error in line 58: A279 A244 59,3
Error in line 46: xwK8A A279 58,7
Error in line 69: 9PSHdZ A279 33,9
Error in line 72: 9PSHdZ A244 53,3
Error in line 86: D9 S422 87,5
Error in line 85: Dn9 A545 4,9
Error in line 88: Dn9 S422 271,2
Error in line 56: b68 A279 91,5
Error in line 82: 9PSHdZ A279 78,0
Error in line 94: 9PSHdZ S422 36,7
Error in line 106: A279 S422 14,9
Error in line 110: b68 A545 4,7
Error in line 109: 9PSHdZ A244 66,0
Error in line 119: 9PSHdZ A279 82,8
Error in line 130: b68 S422 -5,5
Error in line 126: b68 S422 75,1
Error in line 139: A279 A279 88,0
Error in line 140: xwK8A S422 240,5
Error in line 150: xwK8A A279 90,9
Error in line 147: UtbLk15 A244 43,3
Error in line 148: nSz S422 45,8
Error in line 151: xwK8A S422 95,7
Error in line 146: 9PSHdZ S422 25,6
Error in line 159: 9PSHdZ A244 6,4
Error in line 145: Dn9 A279 49,1
Error in line 152: UtbLk15 S422 53,5
Error in line 167: Dn9 A279 80,5
Error in line 160: 9PSHdZ A279 52,7
Error in line 170: xwK8A A279 6,8
Error in line 177: b68 A545 44,14
Error in line 176: nSz A279 67,9
Error in line 179: Dn9 A279 60,6
Error in line 188: Dn9 A545 146,8
Error in line 192: Dn9 S422 46,0
Error in line 198: xwK8A A545 31,5
Error in line 204: xwK8A S422 75,9
Error in line 205: xwK8A A244 97,8
Error in line 207: xwK8A A279 19,1
Error in line 211: UtbLk15 A279 81,5
Error in line 224: b68 S422 29,1
Error in line 233: UtbLk15 A545 59,6
Error in line 234: A279 S422 65,8
Error in line 240: A279 A244 50,4
Error in line 249: Dn9 A545 97,4
